IAC SDSS rerun work

--- a/dmu0/dmu0_IAC_Stripe82_Legacy_Project/make_cat.ipynb
+++ b/dmu0/dmu0_IAC_Stripe82_Legacy_Project/make_cat.ipynb
@@ -21,7 +21,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-09-20 15:52:13.658317\n"
+      "2018-09-21 17:03:17.431555\n"
      ]
     }
    ],
@@ -72,7 +72,9 @@
     {
      "data": {
       "text/plain": [
-       "['./data/tiles/f0011_gal.cat', './data/tiles/f0011_ps.cat']"
+       "['./data/tiles/f0011_gal.cat',\n",
+       " './data/tiles/f0011_ps.cat',\n",
+       " './data/tiles/f0141_gal.cat']"
       ]
      },
      "execution_count": 3,
@@ -105,7 +107,7 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4358593616\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4360467960\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>col1</th><th>col2</th><th>col3</th><th>col4</th><th>col5</th><th>col6</th><th>col7</th><th>col8</th><th>col9</th><th>col10</th><th>col11</th><th>col12</th><th>col13</th><th>col14</th><th>col15</th><th>col16</th><th>col17</th><th>col18</th><th>col19</th><th>col20</th><th>col21</th><th>col22</th><th>col23</th><th>col24</th><th>col25</th><th>col26</th><th>col27</th><th>col28</th><th>col29</th><th>col30</th><th>col31</th><th>col32</th><th>col33</th><th>col34</th><th>col35</th><th>col36</th><th>col37</th><th>col38</th><th>col39</th><th>col40</th><th>col41</th><th>col42</th><th>col43</th><th>col44</th><th>col45</th><th>col46</th><th>col47</th><th>col48</th><th>col49</th><th>col50</th><th>col51</th><th>col52</th><th>col53</th><th>col54</th><th>col55</th><th>col56</th><th>col57</th><th>col58</th><th>col59</th><th>col60</th><th>col61</th><th>col62</th><th>col63</th><th>col64</th><th>col65</th><th>col66</th><th>col67</th><th>col68</th><th>col69</th><th>col70</th><th>col71</th><th>col72</th><th>col73</th><th>col74</th><th>col75</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th></tr></thead>\n",
        "<tr><td>310.089107</td><td>-1.2355282</td><td>22.7462</td><td>23.1497</td><td>24.375</td><td>23.3181</td><td>22.8383</td><td>22.858</td><td>0.3598</td><td>0.7628</td><td>0.3202</td><td>0.2261</td><td>0.2654</td><td>0.3903</td><td>4.348</td><td>20.6771</td><td>20.7329</td><td>22.4156</td><td>21.5</td><td>20.8421</td><td>20.7255</td><td>0.029</td><td>0.0418</td><td>0.0394</td><td>0.0281</td><td>0.025</td><td>0.0297</td><td>5.364</td><td>19.1425</td><td>19.1395</td><td>20.7003</td><td>19.8245</td><td>19.2839</td><td>19.1504</td><td>0.0109</td><td>0.014</td><td>0.0164</td><td>0.0114</td><td>0.01</td><td>0.0109</td><td>4.655</td><td>18.5251</td><td>18.5078</td><td>20.0178</td><td>19.1803</td><td>18.6769</td><td>18.531</td><td>0.01</td><td>0.0129</td><td>0.0137</td><td>0.0098</td><td>0.009</td><td>0.0099</td><td>4.514</td><td>18.2026</td><td>18.233</td><td>19.6292</td><td>18.7985</td><td>18.3173</td><td>18.21</td><td>0.0219</td><td>0.0303</td><td>0.0265</td><td>0.0193</td><td>0.0185</td><td>0.0217</td><td>4.232</td><td>3.5</td><td>5.28</td><td>5.192</td><td>3.678</td><td>-51.25</td><td>1.412</td><td>0.292</td><td>3</td></tr>\n",
@@ -155,7 +157,7 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4687692240\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4363026840\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>col1</th><th>col2</th><th>col3</th><th>col4</th><th>col5</th><th>col6</th><th>col7</th><th>col8</th><th>col9</th><th>col10</th><th>col11</th><th>col12</th><th>col13</th><th>col14</th><th>col15</th><th>col16</th><th>col17</th><th>col18</th><th>col19</th><th>col20</th><th>col21</th><th>col22</th><th>col23</th><th>col24</th><th>col25</th><th>col26</th><th>col27</th><th>col28</th><th>col29</th><th>col30</th><th>col31</th><th>col32</th><th>col33</th><th>col34</th><th>col35</th><th>col36</th><th>col37</th><th>col38</th><th>col39</th><th>col40</th><th>col41</th><th>col42</th><th>col43</th><th>col44</th><th>col45</th><th>col46</th><th>col47</th><th>col48</th><th>col49</th><th>col50</th><th>col51</th><th>col52</th><th>col53</th><th>col54</th><th>col55</th><th>col56</th><th>col57</th><th>col58</th><th>col59</th><th>col60</th><th>col61</th><th>col62</th><th>col63</th><th>col64</th><th>col65</th><th>col66</th><th>col67</th><th>col68</th><th>col69</th><th>col70</th><th>col71</th><th>col72</th><th>col73</th><th>col74</th><th>col75</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th></tr></thead>\n",
        "<tr><td>310.0406973</td><td>-1.2388384</td><td>18.8416</td><td>18.8416</td><td>19.5305</td><td>18.9745</td><td>18.8274</td><td>18.7964</td><td>0.016</td><td>0.016</td><td>0.0209</td><td>0.0164</td><td>0.0161</td><td>0.0171</td><td>2.376</td><td>16.8871</td><td>16.8871</td><td>17.4646</td><td>16.9879</td><td>16.878</td><td>16.8573</td><td>0.0027</td><td>0.0027</td><td>0.0035</td><td>0.0028</td><td>0.0027</td><td>0.0027</td><td>2.145</td><td>16.1335</td><td>16.1335</td><td>16.6253</td><td>16.226</td><td>16.1239</td><td>16.101</td><td>0.0019</td><td>0.0019</td><td>0.0024</td><td>0.002</td><td>0.0019</td><td>0.0019</td><td>1.964</td><td>15.8372</td><td>15.8372</td><td>16.2734</td><td>15.9237</td><td>15.8279</td><td>15.8038</td><td>0.0019</td><td>0.0019</td><td>0.0023</td><td>0.0019</td><td>0.0019</td><td>0.0019</td><td>1.853</td><td>15.6703</td><td>15.6703</td><td>16.1325</td><td>15.7615</td><td>15.6608</td><td>15.6401</td><td>0.004</td><td>0.004</td><td>0.0048</td><td>0.0041</td><td>0.004</td><td>0.0042</td><td>1.919</td><td>3.5</td><td>3.5</td><td>2.574</td><td>2.509</td><td>54.91</td><td>1.026</td><td>0.025</td><td>2</td></tr>\n",
@@ -301,11 +303,23 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bad file: ./data/tiles/f0141_gal.cat\n"
+     ]
+    }
+   ],
    "source": [
     "full_cat = Table()\n",
     "for cat_name in file_list:\n",
-    "    cat = Table.read(cat_name, format='ascii')\n",
+    "    try:\n",
+    "        cat = Table.read(cat_name, format='ascii')\n",
+    "    except: \n",
+    "        print('Bad file: ' + cat_name)\n",
+    "        continue\n",
     "    fix_headers(cat)\n",
     "    \n",
     "    cat.add_column(Column(data=np.zeros(len(cat)), name='sdss_stellarity', dtype='int32'))\n",
@@ -355,7 +369,7 @@
      "data": {
       "text/html": [
        "<i>Table masked=True length=15694</i>\n",
-       "<table id=\"table4657358496\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4610687048\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ALPHA_J2000</th><th>DELTA_J2000</th><th>MAG_AUTO_u</th><th>MAG_PETRO_u</th><th>MAG_APER_1_u</th><th>MAG_APER_2_u</th><th>MAG_APER_3_u</th><th>MAG_APER_4_u</th><th>MAGERR_AUTO_u</th><th>MAGERR_PETRO_u</th><th>MAGERR_APER_1_u</th><th>MAGERR_APER_2_u</th><th>MAGERR_APER_3_u</th><th>MAGERR_APER_4_u</th><th>FLUX_RADIUS_u</th><th>MAG_AUTO_g</th><th>MAG_PETRO_g</th><th>MAG_APER_1_g</th><th>MAG_APER_2_g</th><th>MAG_APER_3_g</th><th>MAG_APER_4_g</th><th>MAGERR_AUTO_g</th><th>MAGERR_PETRO_g</th><th>MAGERR_APER_1_g</th><th>MAGERR_APER_2_g</th><th>MAGERR_APER_3_g</th><th>MAGERR_APER_4_g</th><th>FLUX_RADIUS_g</th><th>MAG_AUTO_r</th><th>MAG_PETRO_r</th><th>MAG_APER_1_r</th><th>MAG_APER_2_r</th><th>MAG_APER_3_r</th><th>MAG_APER_4_r</th><th>MAGERR_AUTO_r</th><th>MAGERR_PETRO_r</th><th>MAGERR_APER_1_r</th><th>MAGERR_APER_2_r</th><th>MAGERR_APER_3_r</th><th>MAGERR_APER_4_r</th><th>FLUX_RADIUS_r</th><th>MAG_AUTO_i</th><th>MAG_PETRO_i</th><th>MAG_APER_1_i</th><th>MAG_APER_2_i</th><th>MAG_APER_3_i</th><th>MAG_APER_4_i</th><th>MAGERR_AUTO_i</th><th>MAGERR_PETRO_i</th><th>MAGERR_APER_1_i</th><th>MAGERR_APER_2_i</th><th>MAGERR_APER_3_i</th><th>MAGERR_APER_4_i</th><th>FLUX_RADIUS_i</th><th>MAG_AUTO_z</th><th>MAG_PETRO_z</th><th>MAG_APER_1_z</th><th>MAG_APER_2_z</th><th>MAG_APER_3_z</th><th>MAG_APER_4_z</th><th>MAGERR_AUTO_z</th><th>MAGERR_PETRO_z</th><th>MAGERR_APER_1_z</th><th>MAGERR_APER_2_z</th><th>MAGERR_APER_3_z</th><th>MAGERR_APER_4_z</th><th>FLUX_RADIUS_z</th><th>KRON_RADIUS</th><th>PETRO_RADIUS</th><th>A_IMAGE</th><th>B_IMAGE</th><th>THETA_IMAGE</th><th>ELONGATION</th><th>ELLIPTICITY</th><th>FLAGS</th><th>sdss_stellarity</th><th>sdss_iac_id</th></tr></thead>\n",
        "<thead><tr><th>deg</th><th>deg</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>pix</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>pix</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>pix</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>pix</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th>pix</th><th></th><th></th><th>pix</th><th>pix</th><th>deg</th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>int32</th><th>int32</th></tr></thead>\n",
