Make COSMOS full CIGALE input for Jeni

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
@@ -360,6 +360,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Make catalogue of all photo-z objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue = master_catalogue[optnir].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correction for galactic extinction\n",
+    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertion to CIGALE format\n",
+    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(g_bands)\n",
+    "remove_unneeded_fluxes(r_bands)\n",
+    "remove_unneeded_fluxes(i_bands)\n",
+    "remove_unneeded_fluxes(z_bands)\n",
+    "remove_unneeded_fluxes(y_bands)\n",
+    "remove_unneeded_fluxes(j_bands)\n",
+    "remove_unneeded_fluxes(h_bands)\n",
+    "remove_unneeded_fluxes(ks_bands)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue.write(\"data_tmp/COSMOS_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Catalogue using spectroscopic redshift"
    ]
   },
@@ -518,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
