--- a/dmu31/dmu31_Examples/dmu31_volume_correction.ipynb
+++ b/dmu31/dmu31_Examples/dmu31_volume_correction.ipynb
@@ -1254,6 +1254,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
@@ -1269,7 +1270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
