Make COSMOS with latest ids

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX=\"20180313\"\n",
+    "SUFFIX=\"20180619\"\n",
     "master_catalogue = Table.read(\"../../dmu32/dmu32_COSMOS/data/COSMOS_{}_cigale.fits\".format(SUFFIX))\n"
    ]
   },
@@ -79,13 +79,8 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue.rename_column('help_id', 'main_help_id')\n",
-    "master_catalogue.add_column(Column(gen_help_id(master_catalogue['ra'], master_catalogue['dec']),\n",
-    "                                   name=\"help_id\"))\n",
-    "merged_catalogue['help_id', 'main_help_id'].write(\n",
-    "    \"./data/master_list_help_cigale_cross_ident_cosmos{}.fits\".format(SUFFIX), overwrite=True)\n",
-    "\n",
-    "merged_catalogue.remove_columns('main_help_id')"
+    "master_catalogue['help_id', 'old_help_id'].write(\n",
+    "    \"./data/master_list_help_cigale_cross_ident_cosmos{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
