Flag dtype issue

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
@@ -80,7 +80,20 @@
    "outputs": [],
    "source": [
     "master_catalogue['help_id', 'old_help_id'].write(\n",
-    "    \"./data/master_list_help_cigale_cross_ident_cosmos{}.fits\".format(SUFFIX), overwrite=True)"
+    "    \"./data/master_list_help_cigale_cross_ident_cosmos_{}.fits\".format(SUFFIX), overwrite=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#For some reason there is an issue with the flag dtypes\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if col.startswith('flag') and master_catalogue[col].dtype = 'float64':\n",
+    "        master_catalogue[col] = master_catalogue[col].as_type('bool')\n",
+    "    "
    ]
   },
   {
@@ -457,9 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -488,9 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -560,6 +569,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
