--- a/dmu1/dmu1_ml_COSMOS/1.1_CANDELS-3D-HST.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.1_CANDELS-3D-HST.ipynb
@@ -168,9 +168,9 @@
     "        \n",
     "        errcol = \"ferr{}\".format(col[1:])\n",
     "        \n",
-    "        catalogue[col] = catalogue[col] * 0.3631e-6\n",
+    "        catalogue[col] = catalogue[col] * 0.3631\n",
     "        catalogue[col].unit = u.microjansky\n",
-    "        catalogue[errcol] = catalogue[errcol] * 0.3631e-6\n",
+    "        catalogue[errcol] = catalogue[errcol] * 0.3631\n",
     "        catalogue[errcol].unit = u.microjansky\n",
     "      \n",
     "\n",
@@ -516,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
