Rerun COSMOS final stage to fix strange unit error

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -128,7 +128,8 @@
     "\n",
     "xid_pacs.add_column(Column(\n",
     "    data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
-    "                 xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l*1000.0']],\n",
+    "                                          #For reasons I don't understand this one column is in Jy\n",
+    "                 xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l*1000.0']*1000.0],\n",
     "                axis=0),\n",
     "    name=\"ferr_pacs_red\"\n",
     "))\n",
@@ -622,6 +623,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
@@ -637,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
