--- a/dmu26/dmu26_XID+MIPS_XMM-LSS/XID+MIPS_prior-SPUDS.ipynb
+++ b/dmu26/dmu26_XID+MIPS_XMM-LSS/XID+MIPS_prior-SPUDS.ipynb
@@ -290,11 +290,11 @@
     {
      "ename": "SystemExit",
      "evalue": "",
+     "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[0;31mSystemExit\u001b[0m\n"
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
@@ -427,11 +427,11 @@
     {
      "ename": "SystemExit",
      "evalue": "",
+     "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[0;31mSystemExit\u001b[0m\n"
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
@@ -471,30 +471,28 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
